--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@tinyflow-ai/vue": "^0.0.9",
     "@traptitech/markdown-it-katex": "^3.6.0",
     "@vicons/ionicons5": "^0.13.0",
     "@vue-office/pdf": "^2.0.10",
     "@vueuse/core": "^9.13.0",
+    "ant-design-vue": "^4.2.6",
     "await-to-js": "^3.0.0",
     "element-plus": "^2.9.2",
     "eventsource-parser": "^1.1.1",
@@ -84,6 +86,7 @@
     "tailwindcss": "^3.3.6",
     "typescript": "~4.9.5",
     "vite": "^4.2.0",
+    "vite-svg-loader": "^5.1.0",
     "vite-plugin-pwa": "^0.14.4",
     "vite-plugin-svg-icons": "^2.0.1",
     "vitepress": "^1.6.3",
