feat:增加和优化docker部署文件

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,35 +1,62 @@
-worker_processes 1;
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
 
-events {
-    worker_connections 1024;
-}
+    access_log  /var/log/nginx/host.access.log  main;
 
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    # 安全头部
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+    add_header X-XSS-Protection "1; mode=block";
 
-    sendfile        on;
-    keepalive_timeout  65;
+    # 允许混合内容（HTTP和HTTPS混合）
+    add_header Content-Security-Policy "upgrade-insecure-requests";
 
-    server {
-        listen       8081;
-        server_name  localhost;
+    # 静态资源 / 前端 SPA
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
 
-        location / {
-            root   /usr/share/nginx/html/web;
-            index  index.html index.htm;
-            try_files $uri $uri/ /index.html;
+        # CORS 配置
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
+
+        # 支持预检请求
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
         }
+    }
 
-        location /api/{
-            proxy_pass http://ruoyi-server:6039/; 
-            # 避免出现反代https域名出现502错误
-            proxy_ssl_server_name on;
-        }
+    # API 路由代理到后端
+    location /api/ {
+        proxy_pass http://solstone-backend:6039/;   # 改成你的后端地址
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
+        # CORS
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
+
+        # 处理 OPTIONS 预检请求
+        if ($request_method = 'OPTIONS') {
+            add_header 'Content-Length' 0;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            return 204;
         }
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
