fix:修改nginx使得能上传50MB文件;修改解析本地大模型回复的效果;修改气泡底下的图标按钮。

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,9 @@ server {
 
     access_log  /var/log/nginx/host.access.log  main;
 
+		# 上传文件大小限制
+    client_max_body_size 50M;  # 根据实际需求设置
+
     # 安全头部
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
